# curator

./: .coverage  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  README_zh.md  api_request.py  api_request_parallel_processor.py  bella.py  build.py  build_pkg.py  camel.py  db.py  fast_camel.py  math.jsonl  openhermesv3.py  package-lock.json  prompt.py  publish_pkg.sh  pyproject.toml  pytest.ini  requirements.txt  simple-anthropic.py  slow_camel.py  test_install_ui.py  test_loop.py
.github/workflows/: lint-and-test.yaml  lint.yaml  tests.yaml
bespoke-dataset-viewer/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
bespoke-dataset-viewer/app/: globals.css  layout.tsx  page.tsx
bespoke-dataset-viewer/components/dataset-viewer/: DatasetViewer.tsx  DetailsSidebar.tsx  DistributionChart.tsx  MessagePreviewCell.tsx  RunsTable.tsx  SortableHeader.tsx  TimeSeriesChart.tsx
bespoke-dataset-viewer/components/layout/: Header.tsx
bespoke-dataset-viewer/components/ui/: python-highlighter.tsx  sheet.tsx  sortable-header.tsx  sortable-table.tsx  toast.tsx  tooltip.tsx  use-toast.ts
bespoke-dataset-viewer/lib/: utils.ts
bespoke-dataset-viewer/types/: dataset.ts  table.ts
docs/: CITATION.cff  CONTRIBUTING.md  README_zh.md  local_models.md
examples/: README.md  big.py  camel.py  distill.py  judge.py  kluster.py  kluster_online.py  litellm_example.py  litellm_model_coverage_example.py  litellm_prompting_example.py  litellm_recipe_prompting.py  litellm_recipe_prompting_example.py  litellm_recipe_structured_output.py  litellm_recipe_structured_output_example.py  litellm_structured_output_example.py  openhermesv3.py  overload.py  poem.py  poetry.py  simple_poem.py  single_litellm_example.py
examples/bespoke-stratos-data-generation/: README.md  generate_apps_data.py  generate_taco_data.py  requirements.txt
examples/bespoke-stratos-data-generation/util/: code_execution_apps.py  code_execution_taco.py
examples/blocks/: simplestrat.py
examples/code-execution/: README.md  apps.py  apps_taco.ipynb  apps_taco.py  generate.py  taco.py  test.ipynb
examples/code-generation/: apps_taco.ipynb  apps_taco.py  generate.py
examples/custom/: check.py  direct_qa.py  download_data.py  download_model.sh  infer.py  killall.sh  litellm_test.py  load.py  models.py  predict.py  read_requests.py  request.sh  run.slurm  score.py  script.sh  script_v100.sh  sync_files.sh  synthesize.py  test.py  train_classifier.py  utils.py
examples/deepseek/: example.py
examples/function-calling/: simple_function_calling.py
examples/litellm-recipe-generation/: litellm_recipe_prompting.py  litellm_recipe_structured_output.py  requirements.txt
examples/multimodal/: recipe.py
examples/persona-hub/: prompt_templates.py  synthesize.py
examples/poem-generation/: poem.py  simple_poem.py
examples/providers/: claude_reasoning_batch.py  claude_reasoning_online.py  gemini_batch.py  inference_net_batch.py  inference_net_online.py  klusterai_batch.py  klusterai_online.py  mistral_batch.py  openrouter_reasoning_online.py
examples/reannotation/: main.py  openhermes.py  wildchat.py
examples/stratos-r1-data-generation/: README.md  combine_data.py  generate_apps_data.py  generate_numina_data.py  generate_taco_data.py
examples/ungrounded-qa/: requirements.txt  ungrounded_qa.py
examples/viewer/: push_to_viewer.py
examples/vllm-offline/: requirements.txt  vllm_recipe.py  vllm_recipe_structured.py
examples/vllm-online/: start_vllm_server.sh  vllm_online.py  vllm_online_structured.py
examples/vllm-recipe-generation/: vllm_recipe.py  vllm_recipe_structured.py
src/bespokelabs/: __init__.py
tests/: .coverage  conftest.py  helpers.py  simple_online.py  test_batch.py  test_caching.py  test_db_schema.py  test_examples.py  test_install_ui.py  test_litellm_models.py  test_online_vllm.py  test_openai_online_request_processor.py  test_prompt.py  test_prompt_formatter.py  test_simple_vllm.py
tests/batch/: batch_OPENAI_ERROR_FILE_EXAMPLE.jsonl  batch_objects.jsonl  msgbatch_ANTHROPIC_FAILED_REQUESTS_EXAMPLE.jsonl  simple_batch.py  test_generic_response_file_from_responses.py  test_partial_batch_resubmit.py  test_resume.py  test_switch_keys.py
tests/batch_tests/: test_batch_resume.py  test_batch_switch_keys.py  test_helpers.py  three_small_batches.py  three_small_batches_cancel.py
tests/cache/: one.py  test_different_files.py  two.py
tests/cache_tests/: two.py
tests/code_executor/: .coverage  test_backend.py  test_code_db_schema.py  test_code_execution.py  test_code_formatter.py  test_code_status_tracker.py  test_data_types.py
tests/examples/: test_examples.py  test_generation_params.py
tests/integrations/: conftest.py  helper.py  test_all.py  test_blocks.py  test_gemini_batch.py  test_mistral_batch.py  test_multimodal.py  test_push_to_viewer.py
tests/litellm/: test_models.py
tests/unittests/: helpers.py  simple_online.py  test_batch.py  test_caching.py  test_dataset_conversion.py  test_db_schema.py  test_install_ui.py  test_litellm_models.py  test_online_status_tracker.py  test_online_vllm.py  test_openai_online_request_processor.py  test_prompt.py  test_prompt_formatter.py  test_simple.py  test_simple_vllm.py  test_status_tracker.py
~/.cache/: .curator_config
(+193 files in other folders)
