[tool.poetry]
name = "bespokelabs-curator"
version = "0.1.7rc1"
description = "Bespoke Labs Curator"
authors = ["Bespoke Labs <company@bespokelabs.ai>"]
readme = "README.md"
packages = [
    {include = "bespokelabs", from = "src"},
]
include = [
    "src/bespokelabs/curator/viewer/static/**/*"
]
exclude = [
    "src/bespokelabs/curator/viewer/static/.next/cache/**/*"
]
license = "Apache-2.0"
homepage = "https://github.com/bespokelabsai/curator"
repository = "https://github.com/bespokelabsai/curator"
keywords = ["ai", "curator", "bespoke"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = ">=2.9.2"
datasets = "^3.0.2"
instructor = "^1.6.3"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pandas = "2.2.2"
xxhash = "^3.5.0"
tqdm = "^4.67.0"
matplotlib = "^3.9.2"
aiofiles = "^24.1.0"
tiktoken = "^0.8.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
twine = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
curator-viewer = "bespokelabs.curator.viewer.__main__:main"
