[tool.poetry]
name = "bespokelabs-curator"
version = "0.1.14"
description = "Bespoke Labs Curator"
authors = ["Bespoke Labs <company@bespokelabs.ai>"]
readme = "README.md"
packages = [
    {include = "bespokelabs", from = "src"},
]
include = [
    "src/bespokelabs/curator/viewer/static/**/*"
]
exclude = [
    "src/bespokelabs/curator/viewer/static/.next/cache/**/*"
]
license = "Apache-2.0"
homepage = "https://github.com/bespokelabsai/curator"
repository = "https://github.com/bespokelabsai/curator"
keywords = ["ai", "curator", "bespoke"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = ">=2.9.2"
datasets = "^3.0.2"
instructor = "^1.6.3"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pandas = "2.2.2"
xxhash = "^3.5.0"
tqdm = "^4.67.0"
matplotlib = "^3.9.2"
nest-asyncio = "^1.6.0"
rich = "^13.7.0"
litellm = "1.55.4"
isort = "^5.13.2"
tiktoken = ">=0.7.0,<0.8.0"
aiofiles = ">=22.0,<24.0"
vllm = "^0.6.3"
anthropic = "^0.42.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
twine = "^5.0.0"
pytest-dependency = "^0.6.0"
pytest-timeout = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
curator-viewer = "bespokelabs.curator.viewer.__main__:main"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
